# maclean-burned-area-segmentation

./: .gitignore  README.md  custom_encoder_decoder.py  model.py  pyproject.toml  segformer_cfg.py  test.ipynb  test.py  train.py
configs/: _debug.py  ems_segformer-mit-b0_multi_100ep.py  ems_segformer-mit-b0_single_100ep.py  ems_segformer-mit-b3_multi_100ep.py  ems_segformer-mit-b3_multi_10ep.py  ems_segformer-mit-b3_single_100ep.py  ems_segformer-mit-b3_single_10ep.py  ems_segformer-mit-b3_single_dice_loss_10ep.py  ems_segformer-mit-b5_100ep.py  ems_upernet-rn50_multi_100ep.py  ems_upernet-rn50_multi_10ep.py  ems_upernet-rn50_single_100ep.py  ems_upernet-rn50_single_10ep.py  ems_upernet-rn50_single_dice_loss_10ep.py  segformer_with_aux_cfg.py
configs/datasets/: ems.py
configs/models/: segformer_mit-b0.py  segformer_mit-b0_aux.py  segformer_mit-b3.py  segformer_mit-b3_aux.py  segformer_mit-b3_aux_no_pre.py  segformer_mit-b3_no_pre.py  segformer_mit-b3_no_pre_13ch.py  segformer_mit-b5.py  segformer_mit-b5_aux.py  upernet_rn50.py  upernet_rn50_13ch.py  upernet_rn50_aux.py  upernet_rn50_aux_no_pre.py  upernet_rn50_no_pre.py  upernet_rn50_no_pre_13ch.py  upernet_vit-b_aux.py  upernet_vit-s.py  upernet_vit-s_aux.py  upernet_vit-s_aux_no_pre.py  upernet_vit-s_no_pre.py  upernet_vit-s_no_pre_13ch.py
configs/single/: ems_segformer-mit-b3_single_100ep.py  ems_upernet-rn50_single_dice_loss_10ep.py  (+1 more)
notebooks/: convert.ipynb  datamodule.ipynb  explore.ipynb
src/baseg/: __init__.py  io.py  (+5 more)
tools/: base.py  convert.py  launch.py  ssleo2mmseg.py  torch2onnx.py  vit2mmseg.py
(+61 files in other folders)
